# TreeSize

./: .gitignore  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: Commands.rs  FileSystem.rs  main.rs
src/app/: layout.tsx  page.tsx
src/styles/: globals.css
