[package]
name = "treesize"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "treesize_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

#dependencies for filesystem
walkdir = "2.5"
ignore = "0.4" 
fs_extra = "1.3"
chrono = "0.4" 
sysinfo = "0.30" 
rayon = "1.10" 

#errorhandling
thiserror = "1.0"
anyhow = "1.0" 

#exporting
csv = "1.3"

#additional
log = "0.4"
env_logger = "0.11"

